History and storage edited

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -31,9 +31,9 @@
 
         <!-- Per centrare il logo è stato aggiunto lo style a mano, se cambiano le dimensioni delle immagini si deve anche rifare il calcolo del margine-->
         <!--jdenticon.update('canvas#img'); quando cambia l'indirizzo-->
-        <canvas id="img" data-jdenticon-value="0xdD14F1405e4B139f98AA7969bA866AD6D22702FB" style="margin-left: calc(50% - 50px);" class="rounded-circle" width="100" height="100"></canvas> 
-        <a href="#" class="simple-text logo-normal text-center">
-          0xdD14F1405e4B139f98AA7969bA866AD6D22702FB
+        <canvas id="user-account-img" data-jdenticon-value="" style="margin-left: calc(50% - 50px);" class="rounded-circle" width="100" height="100"></canvas> 
+        <a href="#" id="user-account" class="simple-text logo-normal text-center">
+          
         </a>
       </div>
 
