--- a/src/html/storage.html
+++ b/src/html/storage.html
@@ -60,7 +60,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary" data-dismiss="modal" onclick="storageDisplay.test()" id="modal-button"></button>
+        <button type="button" class="btn btn-primary" data-dismiss="modal" id="modal-button"></button>
       </div>
     </div>
   </div>
@@ -68,13 +68,14 @@
 
 <script type="text/javascript">
   $(document).ready(function() {
-    /*storageDisplay.addStorageEntry('0xdD14F1405e4B139f98AA7969bA866AD6D22702FB', '1', 0.46, 0.86, 10000, 5000);
-    storageDisplay.addStorageEntry('0x1MsorNokxnSCrC9j9N5fe5zZeDdKSVTKk22712XC', '1', 0.32, 0.64, 17000, 3000);
-    storageDisplay.addStorageEntry('0x1MsorNokxnSCrC9j9N5fe5zZeDdKSVTKk22712XC', '2', 0.17, 0.77, 25000, 5000);
-    storageDisplay.addStorageEntry('0xa7da9651ee4aa18046f69b719C349Db1e23F2b62', '1', 0.44, 0.92, 10000, 10000);
-    storageDisplay.addStorageEntry('0x99f56e1206c611c0A110960EB3ad66Fc5FAF5612', '1', 0.31, 0.97, 14000, 6000);
-    storageDisplay.addStorageEntry('0xA55529135E3Da7a3db318cA5eDBFFCD08999fE76', '2', 0.56, 0.78, 0, 25000);
-    storageDisplay.addStorageEntry('0xA55529135E3Da7a3db318cA5eDBFFCD08999fE76', '1', 0.47, 0.74, 10000, 15000);
+    /* Test storage
+    Storage.addStorageEntry('0xdD14F1405e4B139f98AA7969bA866AD6D22702FB', '1', 0.46, 0.86, 10000, 5000);
+    Storage.addStorageEntry('0x1MsorNokxnSCrC9j9N5fe5zZeDdKSVTKk22712XC', '1', 0.32, 0.64, 17000, 3000);
+    Storage.addStorageEntry('0x1MsorNokxnSCrC9j9N5fe5zZeDdKSVTKk22712XC', '2', 0.17, 0.77, 25000, 5000);
+    Storage.addStorageEntry('0xa7da9651ee4aa18046f69b719C349Db1e23F2b62', '1', 0.44, 0.92, 10000, 10000);
+    Storage.addStorageEntry('0x99f56e1206c611c0A110960EB3ad66Fc5FAF5612', '1', 0.31, 0.97, 14000, 6000);
+    Storage.addStorageEntry('0xA55529135E3Da7a3db318cA5eDBFFCD08999fE76', '2', 0.56, 0.78, 0, 25000);
+    Storage.addStorageEntry('0xA55529135E3Da7a3db318cA5eDBFFCD08999fE76', '1', 0.47, 0.74, 10000, 15000);
 
     jdenticon.update('canvas.storageImg');*/
   });
