migliorata gestione di eventi

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -40,25 +40,25 @@
       <div class="sidebar-wrapper">
         <ul class="nav">
           <li class="active" id="home-button">
-            <a href="#" onClick="home(); return false;">
+            <a href="#" onClick="PageManager.home(); return false;">
               <i class="fas fa-home"></i>
               <p>Home</p>
             </a>
           </li>
           <li id="history-button">
-            <a href="#" onClick="history(); return false;">
+            <a href="#" onClick="PageManager.history(); return false;">
               <i class="fas fa-book"></i>
               <p>History</p>
             </a>
           </li>
           <li id="storage-button">
-            <a href="#" onClick="storage(); return false;">
+            <a href="#" onClick="PageManager.storage(); return false;">
               <i class="fas fa-database"></i>
               <p>Virtual Storage</p>
             </a>
           </li>
           <li id="my-storage-button" class="energy-manager">
-            <a href="#" onClick="mystorage(); return false;">
+            <a href="#" onClick="PageManager.mystorage(); return false;">
               <i class="fas fa-industry"></i>
               <p>My Virtual Storage</p>
             </a>
